fixed alignment

--- a/Lotto/style.css
+++ b/Lotto/style.css
@@ -91,7 +91,7 @@ html,body{
     /* justify-content: space-evenly; */
     justify-content: flex-start;
     align-items: center;
-    text-decoration: underline;
+    /* text-decoration: underline; */
     opacity: 0;
     
 }
@@ -161,7 +161,7 @@ html,body{
     justify-content: center;
     align-items: center;
     color: var(--golden);
-    text-decoration: underline;
+    /* text-decoration: underline; */
 }
 
 .ticket-line .lotto-line{
@@ -172,8 +172,17 @@ html,body{
     justify-content: space-evenly;
     align-items: center;
     color: var(--golden);
-    text-decoration: underline;
+    /* text-decoration: underline; */
+    padding: 0 5em;
+    text-align: center;
 
+}
+
+.ticket-line .lotto-line p{
+    width: 15%;
+    height: 100;
+    text-align: center;
+    /* border: 1px solid red; */
 }
 
 .ticket-line .power-ball{
@@ -183,7 +192,7 @@ html,body{
     justify-content: space-evenly;
     align-items: center;
     color: var(--golden);
-    text-decoration: underline;
+    /* text-decoration: underline; */
 }
 
 .ticket-line-top{
